Changed Package name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest_js",
+  "name": "REST_APIs",
   "version": "1.0.0",
   "description": "simple restful api",
   "main": "index.js",
